syntax = "proto3";

option java_package = "com.damiandantas.daylighthabits.proto";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME;

message AlertConfigRepositoryProto {
  bool has_sunrise = 1;
  AlertConfigProto sunrise = 2;

  bool has_sunset = 3;
  AlertConfigProto sunset = 4;
}

message AlertConfigProto {
  int64 notice_period = 2;
  bool is_enabled = 3;
}
